--- a/style.css
+++ b/style.css
@@ -57,6 +57,79 @@ nav {
   color: #667eea;
 }
 
+/* Structure de base */
+nav.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+/* Menu */
+.nav-links {
+  display: flex;
+  gap: 1.5rem;
+  list-style: none;
+}
+
+/* Burger (caché par défaut) */
+.burger {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  height: 18px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1002;
+}
+
+.burger span {
+  height: 3px;
+  background-color: white;
+  width: 100%;
+  border-radius: 3px;
+  transition: 0.4s;
+}
+
+.burger.open span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.burger.open span:nth-child(2) {
+  opacity: 0;
+}
+.burger.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Responsive */
+@media screen and (max-width: 768px) {
+  .burger {
+    display: flex;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    gap: 2rem;
+    padding: 2rem 0;
+    transition: left 0.5s ease;
+    z-index: 1000;
+  }
+
+  .nav-links.active {
+    left: 0;
+  }
+}
+
 /* Hero Section */
 .hero {
   height: 100vh;
@@ -69,8 +142,6 @@ nav {
   overflow: hidden;
   background: url("./images/Background.jpg") center/cover;
 }
-
-/* oui */
 
 .hero::before {
   content: "";
@@ -403,14 +474,17 @@ section {
   display: flex;
   align-items: center;
   margin-bottom: 1.5rem;
-  gap: 5px;
+  text-align: left;
+  gap: 10px;
+  /* max-width: 35px; */
 }
 
 .contact-icon {
   font-size: 1.5rem;
   color: #667eea;
   margin-right: 1rem;
-  width: 35px;
+  margin: 0;
+  padding: 0;
 }
 
 /* Footer */
@@ -454,10 +528,6 @@ footer {
 
 /* Responsive */
 @media (max-width: 768px) {
-  .nav-links {
-    display: none;
-  }
-
   .hero h1 {
     font-size: 2.5rem;
   }
