--- a/style.css
+++ b/style.css
@@ -467,7 +467,13 @@ section {
 }
 
 .contact-info {
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-info h3 {
+  margin-bottom: 20px;
 }
 
 .contact-item {
@@ -475,8 +481,8 @@ section {
   align-items: center;
   margin-bottom: 1.5rem;
   text-align: left;
-  gap: 10px;
-  /* max-width: 35px; */
+  gap: 15px;
+  width: 90%;
 }
 
 .contact-icon {
@@ -485,6 +491,8 @@ section {
   margin-right: 1rem;
   margin: 0;
   padding: 0;
+  width: 35px;
+  max-width: 35px;
 }
 
 /* Footer */
@@ -560,5 +568,14 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 30px;
+  }
+
+  .contact-icon {
+    font-size: 1.2rem;
+  }
+
+  .contact-item {
+    gap: 10px;
+    font
   }
 }
